# fluminurs

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build_release_linux.yml  create_release.yml  release.yml  rust.yml
scripts/: compile.linux.sh  compile.mac.sh  compile.macos-latest.sh  compile.ubuntu-latest.sh  compile.windows-latest.sh  compile.windows.sh
src/: api.rs  authorization.rs  conferencing.rs  external_multimedia.rs  file.rs  lib.rs  main.rs  module.rs  multimedia.rs  panopto.rs  resource.rs  streamer.rs  util.rs  weblecture.rs
src/api/: authorization.rs  mod.rs  module.rs
src/multimedia/: external_multimedia.rs  mod.rs
