[package]
name = "fluminurs"
version = "1.1.8"
description = "A client in Rust to access the reverse-engineered LumiNUS API"
authors = ["Julius Putra Tanu Setiaji <indocomsoft@gmail.com>"]
edition = "2018"
repository = "http://github.com/indocomsoft/fluminurs"
readme = "README.md"
license = "MIT"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1

[dependencies]
ammonia = "3.1.0"
bitflags = "1.2.1"
chrono = "0.4.15"
clap = "2.33.3"
futures-util = "0.3"
htmlescape = "0.3.1"
rand = "0.8.0"
reqwest = { version = "0.11.0", features = ["cookies", "json"] }
rpassword = "5.0.0"
sanitize-filename = "0.3.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_urlencoded = "0.7"
tokio = { version = "1.0.1", features = ["full"] }
